test/fail/forwardbody2.min
program
    function forward number xpto do return 42
start
end
